Now able to show entire pattern while playing.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
       <button id="insane" class="ui-button difficulty">INSANE</button>
 
+      <input type="checkbox" name="show" id="show" placeholder="show" class="show">
+      <label for="show" class="show">Show Pattern</label>
+
     </div>
     <div class="row">
       <button id="restart" class="ui-button restart hidden">RESTART</button>
